--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">Fitness</string>
+    <string name="start_button">Start</string>
+    <string name="Profile">Profile</string>
+    <string name="Activity">Activity</string>
+    <string name="Shere">Shere</string>
+    <string name="Settings">Settings</string>
+    <string name="Distance">Distance</string>
+    <string name="Speed">Speed</string>
+    <string name="Time">Time</string>
+    <string name="Home">Home</string>
+    <string name="Record">Record</string>
+    <string name="Male">Male</string>
+    <string name="Female">Female</string>
+    <string name="Subscriptions">Subscriptions</string>
+    <string name="Subscribers">Subscribers</string>
+    <string name="Edit">Edit profile</string>
+    <string name="Week">For this week</string>
+    <string name="Height">Height gain</string>
+    <string name="April">April</string>
+    <string name="May">May</string>
+    <string name="June">June</string>
+    <string name="Media">Media</string>
+    <string name="Name">Name</string>
+    <string name="Surname">Surname</string>
+    <string name="Birthday">Birthday</string>
+    <string name="Save">Save</string>
+    <string name="Password">Password</string>
+    <string name="Login">Login</string>
+    <string name="Registration">Registration</string>
+    <string name="SaveDataPageTitle">Save training</string>
+    <string name="Trainingname">Training name</string>
+    <string name="Trainingdescription">Training description</string>
+    <string name="Typeoftraining">Type of training</string>
+    <string name="Deletetraining">Delete training</string>
+    <string name="EditM">Edit</string>
+    <string name="Delete">Delete</string>
 </resources>
